[package]
name = "uart"
version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/linuiz-project/uart"
keywords = ["uart", "uart_16550", "serial", "io", "osdev"]
categories = ["no-std", "embedded"]
description = "A clean implementation of the UART_16550 device functionality."

[dependencies]
bitflags = "2.9.1"

[features]
default = ["writer"]
writer = []
