[package]
name = "uart"
version = "2.1.1"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/linuiz-project/uart"
keywords = ["uart", "uart_16550", "serial", "io", "osdev"]
categories = ["no-std", "embedded"]
description = "A clean implementation of the UART_16550 device functionality."

[dependencies]
bitflags = "2.9.1"
safe-mmio = "0.2.5"

[features]
default = ["address_impl", "writer_impl"]
address_impl = []
writer_impl = []
